Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29253

Qt Creator crashes when Github copilot is logged in but no copilot access is found

XMLWordPrintable

    • macOS
    • 3b6da21ee (11.0)

      After logging in to Github under the copilot tab in Preferences, I get the QMessageBox that informs that no copilot access is found in the account, and then clicking the Close button on that or escaping the dialog both cause a crash of creator.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            madwinter Marcus Tillmanns
            assam Assam Boudjelthia
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes