LanguageClient: Fix showMessageBox

ClientPrivate::showMessageBox did not create new buttons for
each possible action.

Clicking "Close" would result in a crash as the box had
WA_DeleteOnClose set and we tried to call box->clickedButton()
after exec().

Fixes: QTCREATORBUG-29253
Change-Id: Icc5fff99686fbef928b8ef14449de646ff773b17
Reviewed-by: David Schulz <david.schulz@qt.io>
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>